force-app/main/default/objects/Activity/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any additional notes from the interview</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>